<resources>
    <string name="app_name">GymLog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_menuLogIn">WELCOME</string>
    <string name="iniciarSesion_menuLogIn">LOG IN</string>
    <string name="registrarse_menuLogIn">CREATE AN ACCOUNT</string>
    <string name="user_til">Enter your email</string>
    <string name="password_til">Enter your password</string>
    <string name="delete_set">DELETE SET</string>
    <string name="phrase_confirmation">Are you sure you want to exit?</string>
    <string name="workout_log_empty">Workout Log Empty</string>
    <string name="add_workout">Add workout</string>
    <string name="rm_calculator">RM CALCULATOR</string>
    <string name="timer">TIMER</string>
    <string name="personal_info">Personal info</string>
    <string name="calcular">CALCULATE</string>
    <string name="rmTitle">Your 1RM is:</string>
    <string name="reps">REPS</string>
    <string name="peso">WEIGHT</string>
    <string name="crear_categoria">CREATE NEW CATEGORY</string>
    <string name="category_name">Category name</string>
    <string name="benchPress">BENCH PRESS</string>
    <string name="log_out">Log out</string>
    <string name="info_user">User info</string>
    <string name="export_data">Export data</string>
    <string name="instruccionesPressBanca">Detailed instructions:\nThe bench press is a classic exercise for developing strength and muscle mass in the chest. Follow these steps to perform it correctly:\n\nStarting Position:\n\nLie on a flat bench with your feet flat on the floor.\nMake sure the bar is aligned with your chest.\nGrip:\n\nGrab the bar with your hands slightly wider than shoulder width.\nKeep your elbows bent at about 90 degrees.\nDescent:\n\nLower the bar in a controlled manner towards your chest.\nKeep your elbows close to your body.\nAscent: \n\nPush the bar up by extending your elbows.\nExhale during this movement.</string>
    <string name="objetivos_pressBanca">Objectives and Muscles Worked:\nThe bench press focuses mainly on the development of the pectoralis major, triceps and anterior deltoid muscles. It is essential for improving upper body strength.</string>
    <string name="equipamientoPressBanca">Necessary Equipment:\n\n· Flat bench\n· Bar and weights</string>
    <string name="frecuenciaEjercicio">Number of Recommended Sets and Repetitions:\n\n3 sets of 8-12 repetitions.\n\n\nRest between Sets:\n\nRest 3 to 5 minutes between each set.\n\n\nRecommended Frequency:\n \nInclude exercise in your training routine 1-2 times a week.</string>
    <string name="squat">SQUAT</string>
    <string name="objetivos_Squat">Objectives and Muscles Worked:\n\nThe free squat is a complete exercise that works the muscles of the legs, including the quadriceps, hamstrings and glutes. In addition, it strengthens the lower back and core.\n</string>
    <string name="equipamientoSquat">Necessary Equipment:\n\n· Barbell (optional)\n· Squat rack</string>
    <string name="instruccionesSquat">Detailed Instructions:\n\nThe free squat is a fundamental exercise to work the muscles of the legs and glutes. Follow these steps to do it correctly:\n\n\nStarting Position:\n\n- Stand with your feet at shoulder height.\n- If you are using a bar, place it on your shoulders, keeping your back straight.\n\n\nDescent:\n\n- Bend your knees and hips, as if you were going to sit in an imaginary chair.\n- Go down until your thighs are parallel to the floor or according to your range of motion. \n\n\nAscent:\n\n- Push with your heels to return to the starting position.\n- Remember to keep your back straight and abdomen contracted throughout the movement.\n</string>
    <string name="remo">SEAL ROW</string>
    <string name="objetivos_Remo">Targets and Muscles Worked:\n\nThe Seal Row focuses on the development of the back, specifically the upper muscles, such as the trapezius and rhomboids. It also works the rear deltoids.</string>
    <string name="equipamientoRemo">Necessary Equipment:\n\n· Horizontal bench\n· Barbell</string>
    <string name="instruccionesRemo">Detailed Instructions:\n\nThe Seal Row is an effective exercise for developing the back and deltoid muscles. Follow these steps to do it correctly:\n\n\nStarting Position:\n\nLie face down on a horizontal bench, so that your chest is suspended in the air.\nAdjust the bench so that your feet are firmly supported on the ground.\n\n\nGrip:\n\nGrasp the bar with your hands slightly wider than shoulder width.\nKeep your elbows bent at about 90 degrees.\n\n\nLifting:\n\nRaise your Bar up, bringing your elbows back and squeezing your shoulder blades.\nMake sure you maintain good posture and control the movement at all times.\n\n\nLowing:\n\nLower the bar in a controlled manner to the starting position.</string>
    <string name="nombreUser">User name</string>
    <string name="userEmail">User email</string>
    <string name="altura">HEIGHT</string>
    <string name="coming_soon">(COMING SOON)</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="he_olvidado_contrasenya">I forgot my password</string>
    <string name="email_enviado">Reset password email send it</string>
    <string name="send_email">Send email</string>
    <string name="restablecer_contraseña">RESET PASSWORD</string>
    <!-- Shared Preferences -->
    <string name="chat">Chat</string>
    <string name="chat_username">Chat username</string>
    <string name="chat_color">Chat color</string>
    <string name="cache">Cache</string>
    <string name="offline_mode">Offline mode</string>
    <string name="general">General</string>
    <string name="vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="color_picker">Color Picker</string>
    <string name="home_nav_string">Home</string>
    <string name="send">Send</string>
    <string name="timer_time">Timer time</string>
    <string name="start">START</string>
    <string name="paramNotUpdated">Could not update the parameter</string>
    <string name="paramUpdated">Parameter updated successfully</string>
    <string name="exercise_dificultad">"Difficulty: "</string>
    <string name="exercise_type">"Type: "</string>
    <string name="exercise_muscle">"Muscle: "</string>
    <string name="exercise_equipment">"Equipment: "</string>
    <string name="exercise_instructions">"Instructions: "</string>
    <string name="type_muscle">Type a muscle</string>
    <string name="search">Search</string>
    <string name="notInfoCache">That info is not in the cache</string>
    <string name="noConexion">No internet conection</string>
    <string name="load">Load</string>
    <string name="multimedia">Multimedia</string>
    <string name="notificationContent">You have a new message</string>
</resources>