<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_logIn"
        android:text="@string/restablecer_contraseña"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="top|center"
        android:layout_marginTop="92dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="50dp"
        android:hint="@string/user_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logIn">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_senEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_userName"/>




</androidx.constraintlayout.widget.ConstraintLayout>